fixed layout, question3 not showing and timer not working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-image: url(../images/darkness.png);
     color: white;
+    font-family: 'Anton', sans-serif;
+    letter-spacing: 2px;
 }
 h1 {
 font-family: 'Rock Salt', cursive;
@@ -21,4 +23,102 @@ h5 {
 .custom-control {
     margin-left: 20px;
     margin-top: 40px;
+}
+
+
+h1 {
+    font-size: 60px;
+    color: mediumpurple;
+}
+
+#splashscreen {
+    background-repeat: no-repeat;
+    width: 35%;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
+
+.splashBox {
+    margin: 0 auto;
+    text-align: center;
+    padding: 4%;
+    margin-top: 40%;
+}
+
+.splashBox2 {
+    margin: 0 auto;
+    text-align: center;
+    padding: 4%;
+}
+
+.wrongBox {
+    margin: 0 auto;
+    text-align: center;
+    padding: 4%;
+}
+
+label {
+    color: white;
+}
+
+#answerScreen {
+    display: none;
+    background-repeat: no-repeat;
+    width: 40%;
+    margin: 0 auto;
+    padding: 2%;
+    margin-top: 15%;
+    font-size: 21px;
+}
+
+#timesUp {
+    display: none;
+    background-repeat: no-repeat;
+    width: 35%;
+    margin: 0 auto;
+    padding: 2%;
+    margin-top: 15%;
+    font-size: 21px;
+}
+
+.up {
+    color: maroon;
+}
+
+.timeRemain {
+    padding: 2%;
+    color: maroon;
+}
+
+.timeRemain #time-remain {
+    font-size: 60px;
+}
+
+body .container {
+    height: 100%;
+    text-align: center;
+    display: none;
+    margin-bottom: 5%;
+    padding-bottom: 2%;
+    margin-top: 5%;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.questions {
+    font-size: 25px;
+
+}
+
+.ques,
+label {
+    padding: 1%;
+}
+
+header {
+    font-size: 60px;
+    color: black;
+    margin-top: 2%;
 }
